# 911

./: .gitignore  README.md  config.yaml  config_utils.py  initial_data.txt  pyproject.toml  train.py  unshard_checkpoint.py
.github/workflows/: main.yml
callbacks/: exceptions.py  wandb.py
coord_checks/: sp_gpt_adamw_coord.csv
data/: data_loader.py  data_tokenizer.py  dataset_utils.py
data/web_crawling/: datasets_from_hf.py  fineweb.py  wiki_crawler.py
hyperparams/: lr_scheduler.py  optimizer.py
interpretability/: analyze.py  inference.py  train.py
interpretability/app/: main.py
interpretability/app/static/: index.html
interpretability/data/: lymsys_chat1b.py
interpretability/models/: olmo2_1b.py  qwen3_4b.py
interpretability/nn/: activations.py  sae.py
nn/: activations.py  ffn.py  gpt_block.py  llama_block.py  loss_function.py  multihead_attention.py  norms.py  optimizer.py  rope.py  testt.py  transformer_block.py  utils.py
nn/attention/: gated_attention.py  groupquery_attention.py  minmax_attention.py  multihead_attention.py  multihead_latent_attention.py  native_sparse_attention.py  nsa.py  utils.py
nn/distributed/: config.py  utils.py
nn/transfomer/: gpt_transformer_block.py  llama_transformer_block.py
nn/transfomer/block/: gpt_transformer.py  llama_transformer.py  nanoGPT_transformer.py  nanoGPT_transformer_block.py  qwen3_transformer.py
nn/transfomer/model/: gpt_model.py  llama_model.py  qwen_model.py
optim/: optimizers.py  scheduler.py
post_training/data/: data_tokenizer.py
post_training/data/web_crawling/: datasets_from_hf.py
post_training/inference/: generation.py  inference_utils.py  rollout.py
post_training/scripts/: run_grpo.py
post_training/training/: grpo.py
pre_training/: config.yaml  config_utils.py  train.py
pre_training/callbacks/: wandb.py
pre_training/data/: dataset_utils.py
pre_training/nn/: ffn.py  loss_function.py  norms.py  utils.py
pre_training/nn/attention/: groupquery_attention.py  minmax_attention.py  multihead_attention.py  multihead_latent_attention.py  native_sparse_attention.py  utils.py
pre_training/nn/distributed/: config.py
pre_training/nn/distributed/parallel/: tensor_parallel.py
pre_training/nn/transfomer/block/: gpt_transformer.py  llama_transformer.py  nanoGPT_transformer.py  qwen3_transformer.py
pre_training/nn/transfomer/model/: gpt_model.py  llama_model.py  qwen_model.py
pre_training/scripts/: run_train.sh
scaling/: coord_check.py  coords_check.py  csv_logging.py
scaling_mup/: coord_check.py  mup_coord_check.py  mup_utils.py  test.bsh
scripts/: run_train.sh
train/: train.py
