[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "911"
version = "0.1.0"
description = "Model training for high knowledge of Cars"
readme = "README.md"
authors = [
    {name = "Aman Rangapur", email = "amanrangapur@gmail.com"}
]
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "numpy<2.0",
    "torch>=2.6.0",
    "cached-path>=1.7.2",
    "requests",
    "safetensors",
    "datasets",
    "wandb",
    "tiktoken",
    "black",
    "isort",
    "ruff"
]

[project.urls]
Homepage = "https://github.com/aman-17/911"

[tool.setuptools]
packages = ["nn"]  # Choose which package you want to install