[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "911"
version = "0.1.0"
description = "LLM training"
readme = "README.md"
authors = [
    {name = "Aman Rangapur", email = "amanrangapur@gmail.com"}
]
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "numpy<2.0",
    "torch>=2.6.0",
    "cached-path>=1.7.2",
    "requests",
    "safetensors",
    "transformers",
    "datasets",
    "wandb",
    "tiktoken",
    "black",
    "isort",
    "ruff"
]

[project.urls]
Homepage = "https://github.com/aman-17/911"

[tool.setuptools]
packages = ["nn"]

[project.optional-dependencies]
workflow = [
    "black",
    "isort",
    "ruff"
]

[tool.black]
line-length = 160
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pyright]
reportPrivateImportUsage = false

[tool.ruff]
line-length = 160
target-version = "py311"
exclude = ["olmocr/train/molmo", "tests/*"]
ignore = ["E722"] #ignore bare except

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]